--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-04  Andras Varga
+
+	* error handling changed from simulation.ok() to exceptions.
+
 2002-09-21  Andras Varga
 
 	* filemgrs.cc, akoutvectormgr.cc: applied Steffen Sroka's patches 
