--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-19  Andras Varga
+
+	* cmodule.cc, ctypes.cc: refactoring around buildInside(), see 
+	include/ChangeLog
+
 2002-10-09  Andras Varga
 
 	* refactoring (see include/ChangeLog), cosmetics
