--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-20  Andras Varga
+
+	* cgate.cc: added isConnectedOutside() and isConnectedInside() methods.
+
 2002-10-19  Andras Varga
 
 	* cmodule.cc, ctypes.cc, csimul.cc: refactoring around buildInside(),
