--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-20  Andras Varga
+
+	* misc improvements
+
 2002-10-07  Andras Varga
 
 	* main.cc: added call to ExecuteOnStartup::executeAll().
