--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-29  Andras Varga
+
+	* use combobox.tcl by Bryan Oakley
+
 2002-05-04  ------ omnetpp-2.2 released ------
 
 2001-08-30  Andras Varga
