--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-04  Andras Varga
+
+	* ebnf.y: changed right-recursion to left-recursion (large files caused
+	stack overflow)
+
 2002-10-19  Andras Varga
 
 	* adopted to kernel changes around buildInside(), see include/ChangeLog
