--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-14  Andras Varga
+
+	* opp_test: changes for Windows
+
 2002-10-30  Andras Varga
 
 	* tcl2c.c: commented out old code for Borland C++, it was in the way
