--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-23  Andras Varga
+
+	* jar_expr.c: fixed bug which caused generated code to crash if
+	user-supplied math function (i.e. its cFunctionType object) 
+	was not found 
+
 2002-11-04  Andras Varga
 
 	* ebnf.y: changed right-recursion to left-recursion (large files caused
